# linuxProject

./: configure.ac
autom4te.cache/: traces.0t
src/: Expense.h  Expense.h.gch  List.h  List.h.gch  Makefile  Makefile.am  Structs.h  Structs.h.gch  a.out  callgrind.out.22060  data  listExpansion.c  main.c  mainFunctions.h  mainFunctions.h.gch  mainFunctions_lib.c  program  s  test.c
